Fix: Centered Label - overflowing and unwinding
Always include `padding-inline-end` at label self.
It's prevent recalculation.

--- a/css/leptonChrome.css
+++ b/css/leptonChrome.css
@@ -5182,8 +5182,9 @@
 
     #tabbrowser-tabs[closebuttons="activetab"]
       .tabbrowser-tab:not([selected]):not(:hover, [pinned])
-      .tab-label-container:not([textoverflow]) {
-      margin-inline-end: 19px;
+      .tab-label-container
+      label {
+      padding-inline-end: 19px;
     }
   }
 }
