--- a/src/tabbar/_centered_label.scss
+++ b/src/tabbar/_centered_label.scss
@@ -18,7 +18,7 @@
   #tabbrowser-tabs[closebuttons="activetab"] .tabbrowser-tab:not(:hover,[pinned]) .tab-label-container:not([textoverflow]) {
     margin-inline-end: 1px;
   }
-  #tabbrowser-tabs[closebuttons="activetab"] .tabbrowser-tab:not([selected]):not(:hover, [pinned]) .tab-label-container:not([textoverflow]) {
-    margin-inline-end: 19px;
+  #tabbrowser-tabs[closebuttons="activetab"] .tabbrowser-tab:not([selected]):not(:hover, [pinned]) .tab-label-container label {
+    padding-inline-end: 19px;
   }
 }
